Ajustes de formato

--- a/Arbol.ipynb
+++ b/Arbol.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -421,10 +421,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x1648350>"
+       "<graphviz.dot.Digraph at 0x3f7e570>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,26 +474,26 @@
     "    return current_uncertainty - p * entropia(left) - (1 - p) * entropia(right)\n",
     "\n",
     "def mejor_atributo(filas):\n",
-    "    ganancia_maxima = 0  # keep track of the best information ganancia\n",
-    "    condicion_maxima = None  # keep train of the feature / value that produced it\n",
+    "    ganancia_maxima = 0  \n",
+    "    condicion_maxima = None  \n",
     "    current_uncertainty = entropia(filas)\n",
     "    print(\"Entropía: \", current_uncertainty)\n",
-    "    n_features = len(filas[0]) - 1  # number of columns\n",
+    "    n_features = len(filas[0]) - 1 \n",
     "    columna_seleccionada = 0\n",
     "    \n",
     "    print (\"Ganancias de los atributos: \")\n",
     "    total = 0\n",
-    "    for col in range(n_features):  # for each feature\n",
+    "    for col in range(n_features): \n",
     "        ganancia_por_columna = 0\n",
-    "        valores = set([fila[col] for fila in filas])  # unique valores in the column\n",
-    "        for val in valores:  # for each value\n",
+    "        valores = set([fila[col] for fila in filas])  \n",
+    "        for val in valores:  \n",
     "            condicion = Condicion(col, val)\n",
     "            true_filas, false_filas = division_datos(filas, condicion)\n",
     "            if len(true_filas) == 0 or len(false_filas) == 0:\n",
     "                continue\n",
-    "            # Calculate the information ganancia from this split\n",
+    "            \n",
     "            ganancia = ganancia_informacion(true_filas, false_filas, current_uncertainty)\n",
-    "            #print(ganancia)\n",
+    "            \n",
     "            total = total + ganancia\n",
     "            if ganancia >= ganancia_maxima:\n",
     "                ganancia_por_columna = ganancia\n",
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "4           5.0           3.6           1.4           0.2"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "4           5.0           3.6           1.4           0.2   setosa"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -934,7 +934,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -949,14 +949,14 @@
        "4           5.0           3.6           1.4           0.2   setosa   \n",
        "\n",
        "   De Entrenamiento  \n",
-       "0              True  \n",
+       "0             False  \n",
        "1              True  \n",
        "2              True  \n",
        "3              True  \n",
-       "4             False  "
+       "4              True  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,15 +971,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero de observaciones en los datos de entrenamiento: 111\n",
-      "Numero de observaciones en los datos de prueba: 39\n"
+      "Numero de observaciones en los datos de entrenamiento: 104\n",
+      "Numero de observaciones en los datos de prueba: 46\n"
      ]
     }
    ],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "Index(['Sépalo largo', 'Sépalo ancho', 'Pétalo largo', 'Pétalo ancho'], dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,21 +1018,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2], dtype=int32)"
+       "       1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], dtype=int32)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1059,7 @@
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,25 +1074,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [0.9, 0.1, 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [0. , 0.9, 0.1]])"
+       "array([[1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,21 +1108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
-       "       'setosa', 'setosa', 'setosa', 'versicolor', 'versicolor',\n",
-       "       'versicolor', 'versicolor', 'versicolor', 'virginica',\n",
+       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
+       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
        "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'versicolor', 'virginica'], dtype='<U10')"
+       "       'versicolor', 'versicolor', 'versicolor'], dtype='<U10')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,22 +1136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4     setosa\n",
+       "0     setosa\n",
+       "5     setosa\n",
+       "6     setosa\n",
        "8     setosa\n",
-       "9     setosa\n",
-       "14    setosa\n",
-       "30    setosa\n",
+       "10    setosa\n",
        "Name: Especies, dtype: category\n",
        "Categories (3, object): [setosa, versicolor, virginica]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1207,21 +1205,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>setosa</th>\n",
-       "      <td>9</td>\n",
+       "      <td>18</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>versicolor</th>\n",
        "      <td>0</td>\n",
-       "      <td>14</td>\n",
+       "      <td>12</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>virginica</th>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1230,12 +1228,12 @@
       "text/plain": [
        "Especies Predecidas  setosa  versicolor  virginica\n",
        "Especies Reales                                   \n",
-       "setosa                    9           0          0\n",
-       "versicolor                0          14          1\n",
-       "virginica                 0           2         13"
+       "setosa                   18           0          0\n",
+       "versicolor                0          12          1\n",
+       "virginica                 0           1         14"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,24 +1247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total datos de prueba: 39.0\n",
-      "Numero de Exitos: 36\n"
+      "Total datos de prueba: 46.0\n",
+      "Numero de Exitos: 44\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9230769230769231"
+       "0.9565217391304348"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,9 +1296,17 @@
    "source": [
     "- Alto Nivel. (2013, 1 julio). Árbol de decisión, una herramienta para decidir bien. Recuperado 10 septiembre, 2018, de https://www.altonivel.com.mx/liderazgo/management/36690-arbol-de-decision-una-herramienta-para-decidir-correctamente/\n",
     "- Breiman. L. (2001) RANDOM FORESTS. Setiembre 8, 2018. de Statistics Department University of California Berkeley, CA 94720\n",
+    "- Gordon, J. (s.f.). random-forests/tutorials. Recuperado 11 septiembre, 2018, de https://github.com/random-forests/tutorials/blob/master/decision_tree.ipynb\n",
     "- Sancho C. F. Aprendizaje Inductivo: Árboles de Decisión - Fernando Sancho Caparrini. Recuperado 10 septiembre, 2018, de http://www.cs.us.es/%7Efsancho/?e=104\n",
     "- Simplilearn. (2018) Random Forest Algorithm - Random Forest Explained | Random Forest In Machine Learning | Simplilearn. Sitio web: https://www.slideshare.net/Simplilearn/random-forest-algorithm-random-forest-explained-random-forest-in-machine-learning-simplilearn-91647398\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
